--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.7.4
 charset-normalizer==3.3.2
 Django==4.2.14
+django-debug-toolbar==4.4.6
 djangorestframework==3.15.2
 drf-yasg==1.21.7
 idna==3.7
