--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 Django==4.2.14
 django-debug-toolbar==4.4.6
 djangorestframework==3.15.2
+drf-nested-routers==0.94.1
 drf-yasg==1.21.7
 idna==3.7
 inflection==0.5.1
