--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 Django==4.2.14
 django-debug-toolbar==4.4.6
+django-filter==24.2
+django-jalali==7.0.0
 djangorestframework==3.15.2
 drf-nested-routers==0.94.1
 drf-yasg==1.21.7
 idna==3.7
 inflection==0.5.1
+jalali_core==1.0.0
+jdatetime==5.0.0
 packaging==24.1
 pillow==10.4.0
 python-decouple==3.8
