--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,20 @@ django-jalali==7.0.0
 djangorestframework==3.15.2
 drf-nested-routers==0.94.1
 drf-yasg==1.21.7
+factory-boy==3.3.0
+Faker==26.1.0
 idna==3.7
 inflection==0.5.1
 jalali_core==1.0.0
 jdatetime==5.0.0
 packaging==24.1
 pillow==10.4.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
+six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
 uritemplate==4.1.1
